--- a/mnist_loadData_pca_tsne.ipynb
+++ b/mnist_loadData_pca_tsne.ipynb
@@ -134,7 +134,7 @@
     "plt.figure(figsize=(7,7))\n",
     "idx = 1\n",
     "\n",
-    "grid_data = d.iloc[idx].to_numpy().reshape(28,28)  # reshape from 1d to 2d pixel array\n",
+    "grid_data = d.iloc[idx].values.to_numpy().reshape(28,28)  # reshape from 1d to 2d pixel array\n",
     "plt.imshow(grid_data, interpolation = \"none\", cmap = \"gray\")\n",
     "plt.show()\n",
     "\n",
