--- a/Handwritten Equation Solver.ipynb
+++ b/Handwritten Equation Solver.ipynb
@@ -76,16 +76,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#del database for memory efficiency\n",
-    "del dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -115,7 +105,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -133,14 +123,14 @@
     }
    ],
    "source": [
-    "'overview of dataset'\n",
+    "#overview of dataset\n",
     "g = sns.countplot(y)\n",
     "y.value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,26 +284,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-21-964ddbef4bcc>:4: Model.fit_generator (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-20-964ddbef4bcc>:4: Model.fit_generator (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use Model.fit, which supports generators.\n",
       "Epoch 1/5\n",
-      "896/896 [==============================] - 386s 431ms/step - loss: 0.2758 - accuracy: 0.9156 - val_loss: 0.0495 - val_accuracy: 0.9860\n",
+      "896/896 [==============================] - 415s 464ms/step - loss: 0.2697 - accuracy: 0.9181 - val_loss: 0.0606 - val_accuracy: 0.9796\n",
       "Epoch 2/5\n",
-      "896/896 [==============================] - 391s 437ms/step - loss: 0.0824 - accuracy: 0.9751 - val_loss: 0.0474 - val_accuracy: 0.9881\n",
+      "896/896 [==============================] - 397s 443ms/step - loss: 0.0820 - accuracy: 0.9751 - val_loss: 0.0354 - val_accuracy: 0.9901\n",
       "Epoch 3/5\n",
-      "896/896 [==============================] - 429s 479ms/step - loss: 0.0667 - accuracy: 0.9804 - val_loss: 0.0297 - val_accuracy: 0.9909\n",
+      "896/896 [==============================] - 373s 417ms/step - loss: 0.0648 - accuracy: 0.9813 - val_loss: 0.0316 - val_accuracy: 0.9918\n",
       "Epoch 4/5\n",
-      "896/896 [==============================] - 364s 406ms/step - loss: 0.0606 - accuracy: 0.9829 - val_loss: 0.0294 - val_accuracy: 0.9922\n",
+      "896/896 [==============================] - 428s 478ms/step - loss: 0.0582 - accuracy: 0.9834 - val_loss: 0.0329 - val_accuracy: 0.9916\n",
       "Epoch 5/5\n",
-      "896/896 [==============================] - 354s 395ms/step - loss: 0.0549 - accuracy: 0.9846 - val_loss: 0.0273 - val_accuracy: 0.9930\n"
+      "896/896 [==============================] - 472s 526ms/step - loss: 0.0577 - accuracy: 0.9840 - val_loss: 0.0268 - val_accuracy: 0.9922\n"
      ]
     }
    ],
@@ -333,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +487,7 @@
        "9"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +507,7 @@
        "(9, 28, 28, 1)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +556,7 @@
     "    m_exp = []\n",
     "    temp = []\n",
     "        \n",
-    "    'creating a list separating all elements'\n",
+    "    #creating a list separating all elements'\n",
     "    for item in arr:\n",
     "        if item not in op:\n",
     "            temp.append(item)\n",
@@ -577,7 +567,7 @@
     "    if temp:\n",
     "        m_exp.append(temp)\n",
     "        \n",
-    "    'converting the elements to numbers and operators'\n",
+    "    #converting the elements to numbers and operators'\n",
     "    i = 0\n",
     "    num = 0\n",
     "    for item in m_exp:\n",
@@ -603,7 +593,7 @@
     "            i = i + 1\n",
     "    \n",
     "    \n",
-    "    'joining the list of strings to create the mathematical expression'\n",
+    "    #joining the list of strings to create the mathematical expression'\n",
     "    separator = ' '\n",
     "    m_exp_str = separator.join(m_exp)\n",
     "    \n",
@@ -612,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -695,111 +685,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#if something is calculated wrong\n",
-    "def model_update(X, y, model):\n",
-    "    \n",
-    "    from tensorflow.keras.optimizers import RMSprop\n",
-    "    from keras.utils.np_utils import to_categorical\n",
-    "    from keras.preprocessing.image import ImageDataGenerator\n",
-    "      \n",
-    "    y = to_categorical(y, num_classes = 14)\n",
-    "    \n",
-    "    datagen = ImageDataGenerator(\n",
-    "        featurewise_center=False,  # set input mean to 0 over the dataset\n",
-    "        samplewise_center=False,  # set each sample mean to 0\n",
-    "        featurewise_std_normalization=False,  # divide inputs by std of the dataset\n",
-    "        samplewise_std_normalization=False,  # divide each input by its std\n",
-    "        zca_whitening=False,  # apply ZCA whitening\n",
-    "        rotation_range=10,  # randomly rotate images in the range (degrees, 0 to 180)\n",
-    "        zoom_range = 0.1, # Randomly zoom image \n",
-    "        width_shift_range=0.1,  # randomly shift images horizontally (fraction of total width)\n",
-    "        height_shift_range=0.1,  # randomly shift images vertically (fraction of total height)\n",
-    "        horizontal_flip=False,  # randomly flip images\n",
-    "        vertical_flip=False)  # randomly flip images\n",
-    "\n",
-    "    datagen.fit(X)\n",
-    "    for l in range(0, 5):\n",
-    "        model.layers[l].trainable = False\n",
-    "\n",
-    "    optimizer = RMSprop(lr = 0.0001, rho = 0.9, epsilon = 1e-08, decay=0.0 )\n",
-    "    model.compile(optimizer = optimizer, loss = \"categorical_crossentropy\", metrics = [\"accuracy\"])\n",
-    "        \n",
-    "    history = model.fit(\n",
-    "                            datagen.flow(X,y, batch_size = 1),\n",
-    "                            epochs = 10,\n",
-    "                            verbose = 1\n",
-    "                        )\n",
-    "    \n",
-    "#saving the updated model\n",
-    "    model.save(\"updated_model.h5\") \n",
-    "    \n",
-    "    print(\"Model has been updated!!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Was the expression correctly predicted? (y/n): y\n"
+      "Running on local URL:  http://127.0.0.1:7860/\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"900\"\n",
+       "            height=\"500\"\n",
+       "            src=\"http://127.0.0.1:7860/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x2c0d274eac0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<fastapi.applications.FastAPI at 0x2c0d1b55d60>,\n",
+       " 'http://127.0.0.1:7860/',\n",
+       " None)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#taking user feedback regarding prediction\n",
-    "feedback = input(\"Was the expression correctly predicted? (y/n): \")\n",
+    "import gradio as gr\n",
+    "from PIL import Image\n",
+    "from itertools import groupby\n",
     "\n",
-    "#if no then, asking user for correct expression\n",
-    "if feedback == \"n\":\n",
-    "    corr_ans_str = str(input(\"The correct expression is: \"))\n",
-    "    corr_ans_str = corr_ans_str.replace(\" \", \"\")\n",
-    "    \n",
-    "    def feedback_conversion(correct_ans_str):\n",
-    "        return [char for char in correct_ans_str]\n",
-    "    \n",
-    "    corr_ans_list = feedback_conversion(corr_ans_str)\n",
-    "    dic = {\"/\":\"10\", \"+\": \"11\", \"-\": \"12\", \"*\": \"13\"}  \n",
-    "    corr_ans_list = [dic.get(n, n) for n in corr_ans_list]\n",
-    "    corr_ans_arr= np.array(list(map(int, corr_ans_list)))\n",
-    "    print(corr_ans_arr.shape)\n",
-    "    \n",
-    "    #comparing the expressions and getting the indexes of the wrong predictioned elements\n",
-    "    wrong_pred_indices = []\n",
-    "    \n",
-    "    for i in range(len(corr_ans_arr)):\n",
-    "        if corr_ans_arr[i] == elements_pred[i]:\n",
-    "            pass\n",
-    "        else:\n",
-    "            wrong_pred_indices.append(i)\n",
-    "    \n",
-    "    #picking up the wrongly predicted elements\n",
-    "    X = elements_array[[wrong_pred_indices]]\n",
-    "    \n",
-    "    #reshaping to fit model input standards'\n",
-    "    if len(X.shape) == 3:\n",
-    "        X = X.reshape(-1, 28, 28, 1)\n",
-    "    else:\n",
-    "        pass\n",
-    "    \n",
-    "    #the correct answers as labels\n",
-    "    y = corr_ans_arr[[wrong_pred_indices]]\n",
-    "    \n",
-    "    #updating the model\n",
-    "    model_update(X, y, model)    \n",
-    "    \n",
-    "    \n",
-    "else:\n",
-    "    #if expression is correctly predicted\n",
-    "    pass"
+    "# load the model\n",
+    "model = keras.models.load_model(\"model.h5\")\n",
+    "\n",
+    "def solve_eqn(image):\n",
+    "    w = image.size[0]\n",
+    "    h = image.size[1]\n",
+    "    r = w / h # aspect ratio\n",
+    "    new_w = int(r * 28)\n",
+    "    new_h = 28\n",
+    "    image = image.resize((new_w, new_h))\n",
+    "    new_image_arr=np.array(image)\n",
+    "    new_inv_image_arr = 255 - new_image_arr\n",
+    "    final_image_arr = new_inv_image_arr / 255.0\n",
+    "    m = final_image_arr.any(0)\n",
+    "    out = [final_image_arr[:,[*g]] for k, g in groupby(np.arange(len(m)), lambda x: m[x] != 0) if k]\n",
+    "    num_of_elements = len(out)\n",
+    "    elements_list = []\n",
+    "    for x in range(0, num_of_elements):\n",
+    "        img = out[x]\n",
+    "\n",
+    "        #adding 0 value columns as fillers\n",
+    "        width = img.shape[1]\n",
+    "        filler = (final_image_arr.shape[0] - width) / 2\n",
+    "\n",
+    "        if filler.is_integer() == False:    #odd number of filler columns\n",
+    "            filler_l = int(filler)\n",
+    "            filler_r = int(filler) + 1\n",
+    "        else:                               #even number of filler columns\n",
+    "            filler_l = int(filler)\n",
+    "            filler_r = int(filler)\n",
+    "\n",
+    "        arr_l = np.zeros((final_image_arr.shape[0], filler_l)) #left fillers\n",
+    "        arr_r = np.zeros((final_image_arr.shape[0], filler_r)) #right fillers\n",
+    "\n",
+    "        #concatinating the left and right fillers\n",
+    "        help_ = np.concatenate((arr_l, img), axis= 1)\n",
+    "        element_arr = np.concatenate((help_, arr_r), axis= 1)\n",
+    "\n",
+    "        element_arr.resize(28, 28, 1) #resize array 2d to 3d\n",
+    "        #storing all elements in a list\n",
+    "        elements_list.append(element_arr)\n",
+    "    elements_array = np.array(elements_list)\n",
+    "    elements_array = elements_array.reshape(-1, 28, 28, 1)\n",
+    "    elements_pred =  model.predict(elements_array)\n",
+    "    elements_pred = np.argmax(elements_pred, axis = 1)\n",
+    "    m_exp_str = math_expression_generator(elements_pred)\n",
+    "    while True:\n",
+    "        try:\n",
+    "            answer = eval(m_exp_str)    #evaluating the answer\n",
+    "            answer = round(answer, 2)\n",
+    "            equation  = m_exp_str + \" = \" + str(answer)\n",
+    "            #print(equation)   #printing the equation\n",
+    "            break\n",
+    "\n",
+    "        except SyntaxError:\n",
+    "            print(\"Invalid predicted expression!!\")\n",
+    "            print(\"Following is the predicted expression:\")\n",
+    "            print(m_exp_str)\n",
+    "            break\n",
+    "    return equation\n",
+    "\n",
+    "image = gr.inputs.Image(shape=None,source=\"upload\",type=\"pil\",image_mode=\"L\")\n",
+    "label=gr.outputs.Label(equation)\n",
+    "gr.Interface(\n",
+    "    fn=solve_eqn,\n",
+    "    inputs=image,\n",
+    "    outputs=label,\n",
+    ").launch()\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
